[package]
name = "pong-wgpu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.9.0"
winit = "0.25.0"
pollster = "0.2.4"
cgmath = "0.18.0"
bytemuck = { version = "1.7.2", features = ["derive"] }
env_logger = "0.9.0"
rand = "0.8.4"